Added support for multisite. And removed the need to have composer locally to build wp plugin.

--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -16,6 +16,10 @@ RUN curl -o /bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/pha
 	&& chmod +x /bin/wp \
   && wp --info --allow-root;
 
+RUN curl -sS https://getcomposer.org/installer --output composer-setup.php \
+  && php composer-setup.php --version=1.10.16 \
+  && mv composer.phar /bin/composer
+
 <% versions.forEach((version) => { %>
 RUN curl https://wordpress.org/wordpress-<%= version %>.tar.gz > wordpress-<%= version %>.tar.gz && \
   mkdir -p /var/www/<%= version %> && \
