Add configurable exposed db port

--- a/lib/templates/docker-compose.ejs
+++ b/lib/templates/docker-compose.ejs
@@ -13,6 +13,8 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: 'wordpress'
+    ports:
+      - <%= dbPort %>:3306
     volumes:
       - db:/var/lib/mysql
 volumes:
