--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -1,4 +1,4 @@
-FROM php:7.3-apache
+FROM php:<%= phpVersion %>-apache
 
 RUN apt-get update && apt-get install -y wget libpng-dev libjpeg-dev gnupg default-mysql-client nano less unzip && rm -rf /var/lib/apt/lists/* \
 	&& docker-php-ext-configure gd \
