fix: add php memory limit to config
Adds #54 - adds configuration option `wp.phpMemoryLimit` to set the
PHP_MEMORY_LIMIT environment variable.

--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -8,6 +8,8 @@ RUN a2enmod rewrite
 
 COPY update.sh /var/www/html
 
+ENV PHP_MEMORY_LIMIT=<%= phpMemoryLimit %>
+
 COPY config/php.ini /usr/local/etc/php
 
 COPY config/.htaccess /var/www/html
