Add logic to set working dir and download wp core in no docker mode

--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -6,13 +6,13 @@ RUN apt-get update && apt-get install -y wget libpng-dev libjpeg-dev gnupg defau
 
 RUN a2enmod rewrite
 
-COPY update.sh /var/www/html
+COPY update.sh <%= workingDir %>/html
 
 ENV PHP_MEMORY_LIMIT=<%= phpMemoryLimit %>
 
 COPY config/php.ini /usr/local/etc/php
 
-COPY config/<%= htaccessFile %> /var/www/html/.htaccess
+COPY config/<%= htaccessFile %> <%= workingDir %>/html/.htaccess
 
 RUN curl -o /bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
 	&& chmod +x /bin/wp \
@@ -24,17 +24,17 @@ RUN curl -sS https://getcomposer.org/installer --output composer-setup.php \
 
 <% versions.forEach((version) => { %>
 RUN curl https://wordpress.org/wordpress-<%= version %>.tar.gz > wordpress-<%= version %>.tar.gz && \
-  mkdir -p /var/www/<%= version %> && \
-  tar -xzf wordpress-<%= version %>.tar.gz -C /var/www/<%= version %> && \
-  mv /var/www/<%= version %>/wordpress/* /var/www/<%= version %> && \
-  rm -rf /var/www/<%= version %>/wordpress && \
-  chown -R www-data:www-data /var/www/<%= version %><% if (isWpContent) { %> && \<% } else { %>;<% } %>
-  <% if (isWpContent) { %>rm -rf /var/www/<%= version %>/wp-content;<% } %>
+  mkdir -p <%= workingDir %>/<%= version %> && \
+  tar -xzf wordpress-<%= version %>.tar.gz -C <%= workingDir %>/<%= version %> && \
+  mv <%= workingDir %>/<%= version %>/wordpress/* <%= workingDir %>/<%= version %> && \
+  rm -rf <%= workingDir %>/<%= version %>/wordpress && \
+  chown -R www-data:www-data <%= workingDir %>/<%= version %><% if (isWpContent) { %> && \<% } else { %>;<% } %>
+  <% if (isWpContent) { %>rm -rf <%= workingDir %>/<%= version %>/wp-content;<% } %>
 <% }); %>
 
 <% if (vip) { %>
 RUN curl https://github.com/Automattic/vip-go-mu-plugins-built/archive/master.zip -L -o /usr/src/vip-mu-plugins.zip && \
-  unzip /usr/src/vip-mu-plugins.zip -d /var/www/html/wp-content && cd /var/www/html/wp-content && mv vip-go-mu-plugins-built-master mu-plugins
+  unzip /usr/src/vip-mu-plugins.zip -d <%= workingDir %>/html/wp-content && cd <%= workingDir %>/html/wp-content && mv vip-go-mu-plugins-built-master mu-plugins
 <% } %>
 
 EXPOSE 80
