feat: got https partially working

--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -5,6 +5,11 @@ RUN apt-get update && apt-get install -y wget libpng-dev libjpeg-dev gnupg defau
 	&& docker-php-ext-install gd mysqli
 
 RUN a2enmod rewrite
+RUN a2enmod ssl
+
+RUN sed -i 's/SSLCertificateFile.*snakeoil\.pem/SSLCertificateFile \/var\/www\/html\/localhost.pem/' /etc/apache2/sites-available/default-ssl.conf
+RUN sed -i 's/SSLCertificateKeyFile.*snakeoil\.key/SSLCertificateKeyFile \/var\/www\/html\/localhost.key/' /etc/apache2/sites-available/default-ssl.conf
+RUN a2ensite default-ssl
 
 COPY update.sh /var/www/html
 
@@ -36,5 +41,6 @@ RUN curl https://github.com/Automattic/vip-go-mu-plugins-built/archive/master.zi
 <% } %>
 
 EXPOSE 80
+EXPOSE 443
 
 CMD ["apache2-foreground"]
