feat: made the ssl settings configurable which can be changed using cypress.json

--- a/lib/templates/docker-compose.ejs
+++ b/lib/templates/docker-compose.ejs
@@ -5,7 +5,8 @@ services:
       - db
     build: .
     ports:
-      - <%= port %>:443
+      - <%= port %>:80
+      - <%= sslPort %>:443
     <% if (volumes) { %>volumes: <% volumes.forEach((volume) => { %>
       - <%= volume %> <% }); } %>
   db:
