--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -5,11 +5,13 @@ RUN apt-get update && apt-get install -y wget libpng-dev libjpeg-dev gnupg defau
 	&& docker-php-ext-install gd mysqli
 
 RUN a2enmod rewrite
-RUN a2enmod ssl
 
-RUN sed -i 's/SSLCertificateFile.*snakeoil\.pem/SSLCertificateFile \/var\/www\/html\/localhost.pem/' /etc/apache2/sites-available/default-ssl.conf
-RUN sed -i 's/SSLCertificateKeyFile.*snakeoil\.key/SSLCertificateKeyFile \/var\/www\/html\/localhost.key/' /etc/apache2/sites-available/default-ssl.conf
-RUN a2ensite default-ssl
+<% if (sslCertificate) { %>
+  RUN a2enmod ssl
+  RUN sed -i 's/SSLCertificateFile.*snakeoil\.pem/SSLCertificateFile \/var\/www\/html\/localhost.pem/' /etc/apache2/sites-available/default-ssl.conf
+  RUN sed -i 's/SSLCertificateKeyFile.*snakeoil\.key/SSLCertificateKeyFile \/var\/www\/html\/localhost.key/' /etc/apache2/sites-available/default-ssl.conf
+  RUN a2ensite default-ssl
+<% } %>
 
 COPY update.sh /var/www/html
 
