NPB-742: Enabled encoded URL to fix chart embed code

--- a/lib/templates/dockerfile.ejs
+++ b/lib/templates/dockerfile.ejs
@@ -12,6 +12,8 @@ ENV PHP_MEMORY_LIMIT=<%= phpMemoryLimit %>
 
 COPY config/php.ini /usr/local/etc/php
 
+COPY config/000-default.conf /etc/apache2/sites-available
+
 COPY config/<%= htaccessFile %> /var/www/html/.htaccess
 
 RUN curl -o /bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
