--- a/lib/templates/docker-compose.ejs
+++ b/lib/templates/docker-compose.ejs
@@ -1,4 +1,3 @@
-version: '3.7'
 services:
   wp:
     depends_on:
@@ -9,7 +8,7 @@ services:
     <% if (volumes) { %>volumes: <% volumes.forEach((volume) => { %>
       - <%= volume %> <% }); } %>
   db:
-    image: mariadb
+    image: mariadb:10.8.2
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: 'wordpress'
