feat(environment): allow to specify container runtime environment variables

--- a/lib/templates/docker-compose.ejs
+++ b/lib/templates/docker-compose.ejs
@@ -4,6 +4,9 @@ services:
     depends_on:
       - db
     build: .
+    environment:
+      CYPRESS_TEST: 1 <% Object.entries( env ).forEach(([n,v]) => { %>
+      <%= n %> : <%= v %> <% }); %>
     ports:
       - <%= port %>:80
     <% if (volumes) { %>volumes: <% volumes.forEach((volume) => { %>
